tests/invalid/circular_struct.lang
module main

typedef Derp struct {
    a Derp
};

func main() {
}
